<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_day"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/monday"
        />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@id/text2_tempMin"
        android:layout_marginRight="20dp"
        android:id="@+id/text2_tempMax"
        android:textSize="20sp"
        android:text="@string/temparaMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:id="@+id/text2_tempMin"
        android:textSize="20sp"
        android:text="@string/temparaMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>