<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



<LinearLayout
    android:orientation="vertical"

    tools:context="com.framgia.weather.activity.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/image_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:src="@drawable/settings"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/text_City"
            android:src="@drawable/placeholder"/>

        <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/text_City"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/Hanoi"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/image_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/add"/>

    </RelativeLayout>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_tempMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textSize="50sp"/>
        <TextView
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Do"/>

        <ImageView

            android:paddingTop="1dp"
            android:src="@drawable/thermometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <LinearLayout
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/dropx32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_humidity"
                    android:layout_marginTop="2dp"
                    android:text="@string/humidity"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phantram"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/high_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_tempMax"
                    android:textSize="20sp"
                    android:text="@string/temparaMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/Do"/>

                <TextView
                    android:layout_marginLeft="30dp"
                    android:id="@+id/text_tempMin"
                    android:textSize="20sp"
                    android:text="@string/temparaMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/Do"/>

            </LinearLayout>


            </LinearLayout>

        <LinearLayout
            android:layout_marginRight="30dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/wind_x32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_winds"
                    android:textSize="20sp"
                    android:text="@string/winds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ms"/>
            </LinearLayout>

        </LinearLayout>



    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvTemperature"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"/>



</LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>
